--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Influencer Gear</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/bae0cf1fa5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <nav class="container nav-bar">
+        <div class="ham-burger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="brand">
+            <h2 class="main-color">Influencer products</h2>
+        </div>
+        <div class="nav-content">
+            <div class="nav-items">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="signup.html">Sign up</a></li>
+                    <li><a href="login.html">Log in</a></li>
+                </ul>
+            </div>
+            <div class="search">
+                <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+            </div>
+            <div class="cart">
+                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            </div>
+        </div>
+    </nav>
+    <main>
+        <section class="banner container">
+            <div class="banner-content">
+                <h1 class="h1">Start your Journey as 
+                    Influencer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique voluptatibus saepe veniam optio eius rem ducimus pariatur, veritatis sint?</p>
+                <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-img">
+                <img class="img1" src="./images/Circle design.svg" alt="">
+                <img class="img2" src="./images/main-camera.png" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
